--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Team Fortress: No Mann's Land
+title: "No Mann's Land"
 logo: icon.png
-description: Team Fortress: No Mann's Land is a total conversion for TF2C that turns it into a full-fledged World War II shooter. The mod is inspired by Day Of Defeat, Battlefield 1942, as well as other classic games. No Mann's Land will include new maps, weapons, and features designed to create as seamless of a transition from the Gravel War to World War II. This will all be done using the custom weapons framework included with Team Fortress 2 Classic.
+description: "Team Fortress: No Mann's Land is a total conversion for TF2C that turns it into a full-fledged World War II shooter. The mod is inspired by Day Of Defeat, Battlefield 1942, as well as other classic games. No Mann's Land will include new maps, weapons, and features designed to create as seamless of a transition from the Gravel War to World War II. This will all be done using the custom weapons framework included with Team Fortress 2 Classic."
 show_downloads: true
 theme: jekyll-theme-minimal
